--- a/src/views/demo/demo.html
+++ b/src/views/demo/demo.html
@@ -6,8 +6,12 @@
     <title>demo</title>
   </head>
   <body>
-    <div id="app">
-			demo.html
+		<div>
+			<div id="app" style="opacity: 0;">
+				demo.html
+				fdsfsdfsd
+				<div id="test" v-if="msg">sdfsfsd{{msg}}</div>
+			</div>
 		</div>
     <!-- built files will be auto injected -->
   </body>
