--- a/src/views/index/index.html
+++ b/src/views/index/index.html
@@ -6,10 +6,10 @@
     <title>index</title>
   </head>
   <body>
-		<div id="app" style="opacity: 0;">
+		<div id="app">
 			index.html
 			fdsfsdfsd
-			<div id="test" v-if="msg">sdfsfsd{{msg}}</div>
+			<div id="test" v-text="'sdfsfsd' + msg">sdfsfsd</div>
 		</div>
     <!-- built files will be auto injected -->
   </body>
